# dragonk

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  iwyu.sh
.github/workflows/: ci.yml
cmake/: EmbedFile.cmake  FindGPerf.cmake  config.h.cmake-in
gperf/: keywords.gperf  ppkeywords.gperf
include/dragon/: ast.h  binary_op_kinds.def  codegen.h  expr_types.def  lexer.h  parser.h  token.h  token_type.def  unary_op_kinds.def
include/dragon/core/: arg.h  dir.h  file.h  process.h  str.h  strtox.h  sum.h
include/dragon/driver/: run.h
include/dragon/test/: test.h
resources/snippets/: header.nasm
src/: main.c
src/compiler/: ast.c  codegen.c  lexer.c  parser.c  token.c
src/core/: arg.c  dir.c  file.c  process.c  str.c  strtox.c
src/driver/: main.c  run.c
src/embed/: embed.c
tests/: .ignore  execute.c  lexer.c  list.c  parser.c  test.c
tests/include/dragon/test/: execute.h  info.h  lexer.h  list.h  parser.h
